fixing the alignment on homepage

--- a/src/Home.scss
+++ b/src/Home.scss
@@ -190,7 +190,6 @@
 }
 
 #project-5 {
-  margin-top: -60px;
 }
 
 #project-6 {
@@ -199,7 +198,7 @@
     display: block;
   }
   .project-number {
-    text-align: left;
+    text-align: right;
     margin-bottom: $small-spacer;
   }
   .image {
